Фронтенд: добавлена taiga-ui

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.0.0",
     "@angular/common": "~20.3.0",
     "@angular/compiler": "~20.3.0",
     "@angular/core": "~20.3.0",
     "@angular/forms": "~20.3.0",
     "@angular/platform-browser": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@taiga-ui/addon-mobile": "^4.56.0",
+    "@taiga-ui/cdk": "^4.56.0",
+    "@taiga-ui/core": "^4.56.0",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.56.0",
+    "@taiga-ui/kit": "^4.56.0",
+    "@taiga-ui/layout": "^4.56.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
