Фронтенд: удалены лишние файлы и сделан базовый роутинг

--- a/frontend/nx.json
+++ b/frontend/nx.json
@@ -31,6 +31,9 @@
       "linter": "eslint",
       "style": "less",
       "unitTestRunner": "none"
+    },
+    "@nx/angular:component": {
+      "style": "less"
     }
   },
   "defaultProject": "frontend"
