--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,10 @@
-FROM scratch
+FROM python:3.9-slim
 
-COPY . /app
 WORKDIR /app
 
-CMD ["echo 'r'"]
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+CMD ["python", "main.py"]
