--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y build-essential
+RUN apt-get update && apt-get install -y build-essential pkg-config libdbus-1-dev
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
