--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y build-essential pkg-config libdbus-1-dev
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    pkg-config \
+    libdbus-1-dev \
+    libglib2.0-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
