--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     build-essential \
     pkg-config \
+    liblensfun-dev \
     libdbus-1-dev \
     libglib2.0-dev \
     && rm -rf /var/lib/apt/lists/*
