--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -98,7 +98,7 @@ keyutils==0.6
 libtorrent==2.0.11
 lockfile==0.12.2
 lxml==6.0.1
-Mako==1.3.10.dev0
+Mako==1.3.10
 mallard-ducktype==1.0.2
 Markdown==3.9
 markdown-it-py==4.0.0
