--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -113,7 +113,7 @@ msgpack==1.0.5
 nanobind==2.9.2
 nest_asyncio==1.6.0
 python3-netsnmp==1.1a1
-nftables==0.1
+pip-nftables==1.0.2.post1
 nh3==0.3.0
 npyscreen==4.10.5
 numpy==2.3.3
