Бекенд: исправлен requirements.txt

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     libdbus-1-dev \
     libglib2.0-dev \
     libcairo2-dev \
-    libcairo2-dev \
+    libgirepository1.0-dev \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
