--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -174,7 +174,7 @@ sgmllib3k==1.0.0
 shiboken6==6.9.2
 shiboken6-generator==6.9.2
 six==1.17.0
-smbus==1.1
+smbus>=1.1.post1
 soupsieve==2.8
 stack_data==0.6.3
 TBB==0.2
