--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,181 +22,54 @@ neo4j>=5.8.0
 elasticsearch>=8.7.0
 
 # Дополнительные утилиты
-python-dotenv>=1.0.0  # Для работы с .env файлами
-tqdm>=4.65.0  # Индикаторы прогресса
-loguru>=0.7.0  # Улучшенное логирование
+python-dotenv>=1.0.0
+tqdm>=4.65.0
+loguru>=0.7.0
 
-# Зависимости spaCy моделей (раскомментируйте нужные)
-# python -m spacy download ru_core_news_lg
-# python -m spacy download en_core_web_lg
-
+# Остальные зависимости (без udiskie и других проблемных)
 appdirs==1.4.4
-argcomplete==3.6.2
 asgiref==3.9.1
-asttokens==3.0.0
-attrs==25.3.0
-autocommand==2.2.2
 beautifulsoup4==4.13.5
 boto3==1.40.30
-botocore==1.40.30
-bottle==0.13.2
-btrfsutil==6.16.1
-build==1.3.0
-CacheControl==0.14.3
-cachetools==6.2.0
 certifi==2025.8.3
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
-comm==0.2.3
-conda_package_streaming==0.11.0
-contourpy==1.3.3
-coverage==7.10.6
-cryptography==45.0.7
 cssselect==1.2.0
-cycler==0.12.1
 Cython==3.1.4
-dbus-python==1.4.0
 decorator==5.2.1
-distlib==0.4.0
-distro==1.9.0
-docopt==0.6.2
-docutils==0.21.2
-editables==0.5
-executing==2.2.1
-fastjsonschema==2.21.2
 feedparser==6.0.12
 filelock==3.19.1
-flit_core==3.12.0
-fonttools==4.60.0
 h11==0.16.0
-httptools==0.6.4
-hurry.filesize==0.9
-id==1.5.0
 idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-installer==0.7.0
-ipykernel==6.30.1
-ipython==9.5.0
-ipython_pygments_lexers==1.1.1
-jaraco.classes==3.4.0
-jaraco.collections==5.1.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jaraco.text==4.0.0
-jedi==0.19.2
-jeepney==0.9.0
 Jinja2==3.1.6
 jmespath==1.0.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-keyring==25.6.0
-keyutils==0.6
-libtorrent==2.0.11
-lockfile==0.12.2
 lxml==6.0.1
 Mako==1.3.10
-mallard-ducktype==1.0.2
 Markdown==3.9
-markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-meson==1.9.0
-moddb==0.14.0
-more-itertools==10.8.0
 msgpack==1.0.5
-nanobind==2.9.2
-nest_asyncio==1.6.0
-python3-netsnmp==1.1a1
-pip-nftables==1.0.2.post1
-nh3==0.3.0
-npyscreen==4.10.5
-numpy==2.3.3
 packaging==25.0
-mirrors-countme==0.1.4
-pandas==2.3.1
-parso==0.8.5
-pathspec==0.12.1
-pefile==2024.8.26
-pexpect==4.9.0
 pillow==11.3.0
-pipx==1.7.1
-pkginfo==1.12.1.2
-platformdirs==4.4.0
 pluggy==1.6.0
-pooch==1.8.2
 prompt_toolkit==3.0.52
 psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pybind11==3.0.1
-pycairo==1.28.0
 pycparser==2.22
-pycups==2.0.4
-pycurl==7.45.6
 Pygments==2.19.2
-PyOpenGL==3.1.9
 pyparsing==3.2.4
-pyproject-api==1.9.1
-pyproject_hooks==1.2.0
-PyQt5==5.15.11
-PyQt5_sip==12.17.0
-pyserial==3.5
-PySide6==6.9.2
 pytest==8.4.2
-pytest-cov==6.1.1
-pytest-mock==3.14.0
 python-dateutil==2.9.0
 pytz==2025.2
-pyzmq==27.1.0
-readme_renderer==44.0
 regex==2025.9.18
-reportlab==4.2.2
 requests==2.32.5
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
 rich==14.1.0
-rpm==0.4.0
-ruamel.yaml.clib==0.2.12
-s3transfer==0.14.0
 scipy==1.16.2
-scour==0.38.2
-SecretStorage==3.3.3
-setproctitle==1.3.7
-setuptools==80.9.0
-setuptools-scm==9.2.0
-sgmllib3k==1.0.0
-shiboken6==6.9.2
-shiboken6-generator==6.9.2
 six==1.17.0
-smbus>=1.1.post1
 soupsieve==2.8
-stack_data==0.6.3
-TBB==2022.2.0
-tinycss2==1.4.0
 tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
-trash-cli==0.24.5.26
-trove-classifiers==2025.9.9.12
-twine==6.2.0
 typing_extensions==4.15.0
-uc-micro-py==1.0.3
-udiskie==2.5.8
 urllib3==2.5.0
-userpath==1.9.2
 uvicorn==0.35.0
-uvloop==0.21.0
-virtualenv==20.34.0
-wcwidth==0.2.13
-webencodings==0.5.1
 websockets==15.0.1
 wheel==0.45.1
-wxPython==4.2.3
-zipp==3.21.0
-zstandard==0.25.0
