Бекенд: исправлен порт бекенда

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,4 +23,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "main.py"]
+ENV PYTHONPATH=/app
+
+CMD ["sh", "-c", "uvicorn main:app --host ${SERVER_HOST:-0.0.0.0} --port ${SERVER_PORT:-8000}"]
