--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./frontend/dist/frontend/browser:/usr/share/nginx/html:ro
+      - ./dist/frontend/browser:/usr/share/nginx/html:ro
       - ./nginx/logs:/var/log/nginx
     depends_on:
       - backend
