--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - ./frontend/dist/frontend/browser:/usr/share/nginx/html:ro
 
   db:
-    image: ankane/pgvector:pg17
+    image: pgvector/pgvector:pg17-bookworm
     env_file:
       - .env
     ports:
