--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,15 @@ server {
         proxy_request_buffering off;
     }
 
+    # Ollama
+    location /llm/ {
+        proxy_pass http://localhost:11434/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+
     # Frontend
     location / {
         try_files $uri /index.html;
