--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     networks:
       - app-network
     volumes:
-      - ./frontend/dist/frontend/browser:/usr/share/nginx/html:ro
+      - ./dist/frontend/browser:/usr/share/nginx/html:ro
 
   db:
     image: pgvector/pgvector:pg17-bookworm
